# icescope

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  release.yml
crates/icescope-core/: Cargo.toml
crates/icescope-core/src/: lib.rs
crates/icescope-core/src/cache/: mod.rs  query_result.rs
crates/icescope-core/src/catalog/: glue.rs  hive.rs  local.rs  mod.rs  nessie.rs  rest.rs  s3.rs
crates/icescope-core/src/db/: migrations.rs  mod.rs
crates/icescope-core/src/engine/: athena.rs  datafusion.rs  duckdb.rs  mod.rs  pruning.rs  sql_error.rs
crates/icescope-core/src/iceberg/: data_file.rs  local.rs  mod.rs  scan.rs
crates/icescope-core/src/models/: mod.rs
crates/icescope-core/src/overview/: mod.rs
crates/icescope-core/src/query/: mod.rs
crates/icescope-core/src/storage/: mod.rs  s3.rs  s3_error.rs  s3_exec.rs
crates/icescope-core/tests/: catalog.rs  minio_s3.rs  overview.rs  query_path.rs
docker/: docker-compose.minio.yml
docs/: architecture.md  authentication.md  aws.md  azure.md  build.md  catalogs.md  configuration.md  connections.md  contributing.md  developer-guide.md  download.md  engines.md  explorer.md  faq.md  features.md  gcp.md  getting-started.md  index.md  installation.md  local-warehouse.md  metadata.md  minio.md  roadmap.md  settings.md  snapshots.md  sql-lab.md  storage.md  supported-catalogs.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  explorer.rs  mod.rs  overview.rs  query.rs  settings.rs
(+53 files in other folders)
