[workspace]
members = ["src-tauri", "crates/icescope-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
apache-avro = "0.17"
arrow = "53"
datafusion = "43"
object_store = { version = "0.11", features = ["aws"] }
opendal = { version = "0.50", features = ["services-s3"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
