[package]
name = "icescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
apache-avro.workspace = true
arrow.workspace = true
datafusion.workspace = true
futures.workspace = true
object_store.workspace = true
opendal.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
